Fix title of new post.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul>
     <li class="row">
 	<div class="large-12 columns">
-    	07/07/2013 - <a href="./posts/2013-07-07-simple-example-javascript-monads.html">Simple JavaScript/CoffeeScript Maybe Monad [#]_ - </a>
+    	07/07/2013 - <a href="./posts/2013-07-07-simple-example-javascript-monads.html">Simple JavaScript/CoffeeScript Maybe Monad - </a>
     <div>
 </li>
 <li class="row">
