Minor fixes and changes.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" class="row">
   <head>
-    <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
+    <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Damián Franco Álvarez's blog ATOM Feed">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="./css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/default.css" />
+
     <script src="./js/zepto.js"></script>
     <script src="./js/jquery.js"></script>
     <script src="./js/custom.modernizr.js"></script>
@@ -50,15 +51,15 @@
         <hr />
         <div class="row">
           <article class="large-12 columns">
-            <ul>
+            <ul class="posts">
     <li class="row">
 	<div class="large-12 columns">
-    	07/07/2013 - <a href="./posts/2013-07-07-simple-example-javascript-monads.html">Simple JavaScript/CoffeeScript Maybe Monad - </a>
+    	07/07/2013 - <a href="./posts/2013-07-07-simple-monads-example.html">Simple Monads Example (CoffeeScript)</a>
     <div>
 </li>
 <li class="row">
 	<div class="large-12 columns">
-    	27/06/2013 - <a href="./posts/2013-06-27-whats-wrong-with-you-javascript.html">What's wrong with you, JavaScript? - </a>
+    	27/06/2013 - <a href="./posts/2013-06-27-whats-wrong-with-you-javascript.html">What's wrong with you, JavaScript?</a>
     <div>
 </li>
 
@@ -76,12 +77,12 @@
       </div>
     </div>
     <script>
-                    var src, srcs, _i, _len;
-                srcs = document.querySelectorAll("pre.sourceCode");
-                for (_i = 0, _len = srcs.length; _i < _len; _i++) {
-                  src = srcs[_i];
-                  src.classList.add("panel");
-                }
+        var src, srcs, _i, _len;
+        srcs = document.querySelectorAll("pre.sourceCode");
+        for (_i = 0, _len = srcs.length; _i < _len; _i++) {
+          src = srcs[_i];
+          src.classList.add("panel");
+        }
     </script>
     <script src="./js/foundation.min.js">
             
