--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 			<div class="Grid-cell">
 	<ul class="posts">
     	<li>
+    30/12/2013 - <a href="./posts/2013-12-30-th.html">A command-line todo list manager written in Haskell</a>
+</li>
+<li>
     25/09/2013 - <a href="./posts/2013-09-25-noise-reduction-hdr-fusion-bayer-domain.html">Noise reduction in images through HDR fusion in the Bayer domain</a>
 </li>
 <li>
