--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 			<div class="Grid-cell">
 	<ul class="posts">
     	<li>
+    18/01/2014 - <a href="./posts/2014-01-18-alternatives-to-js.html">Alternatives to JavaScript (I)</a>
+</li>
+<li>
     30/12/2013 - <a href="./posts/2013-12-30-th.html">A command-line todo list manager written in Haskell</a>
 </li>
 <li>
